--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,125 @@
+alembic==1.16.4
+annotated-types==0.7.0
+anyio==4.10.0
 APScheduler==3.11.0
-fastapi==0.117.1
-fitz==0.0.1.dev2
+asttokens==3.0.0
+async-timeout==5.0.1
+attrs==25.3.0
+backcall==0.2.0
+backports.asyncio.runner==1.2.0
+bcrypt==4.3.0
+beautifulsoup4==4.13.5
+bleach==6.2.0
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+cloudinary==1.44.1
+colorama==0.4.6
+cryptography==45.0.6
+decorator==5.2.1
+defusedxml==0.7.1
+dnspython==2.7.0
+docopt==0.6.2
+ecdsa==0.19.1
+email_validator==2.2.0
+exceptiongroup==1.3.0
+executing==2.2.1
+fastapi==0.116.1
+fastapi-cli==0.0.10
+fastapi-cloud-cli==0.1.5
+fastjsonschema==2.21.2
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
 icalendar==6.3.1
+idna==3.10
+iniconfig==2.1.0
+ipython==8.12.3
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyterlab_pygments==0.3.0
+lxml==6.0.1
+Mako==1.3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.1.4
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+orjson==3.11.3
+packaging==25.0
+pandocfilters==1.5.1
+parso==0.8.5
 passlib==1.7.4
-Pillow==10.1.0
-pydantic==1.10.6
+pickleshare==0.7.5
+pillow==11.3.0
+pipreqs==0.5.0
+platformdirs==4.4.0
+pluggy==1.6.0
+prompt_toolkit==3.0.52
+psycopg2-binary==2.9.10
+pure_eval==0.2.3
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic-extra-types==2.10.5
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+Pygments==2.19.2
+PyMuPDF==1.26.4
 pytesseract==0.3.13
+pytest==8.4.2
+pytest-asyncio==1.2.0
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
 python-dotenv==1.1.1
-python_dateutil==2.8.2
-python_docx==1.2.0
-python_jose==3.5.0
+python-jose==3.5.0
+python-multipart==0.0.20
 pytz==2025.2
+pywin32==311
+PyYAML==6.0.2
+pyzmq==27.1.0
+redis==6.4.0
+referencing==0.36.2
 reportlab==4.4.3
 requests==2.32.5
+rich==14.1.0
+rich-toolkit==0.15.0
+rignore==0.6.4
+rpds-py==0.27.1
+rsa==4.9.1
+sentry-sdk==2.35.1
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8
 SQLAlchemy==2.0.43
+stack-data==0.6.3
+starlette==0.47.2
+tinycss2==1.4.0
+tomli==2.2.1
+tornado==6.5.2
+traitlets==5.14.3
+typer==0.17.3
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+tzlocal==5.3.1
+ujson==5.11.0
+urllib3==2.5.0
 uvicorn==0.35.0
-alembic==1.16.4
+watchfiles==1.1.0
+wcwidth==0.2.13
+webencodings==0.5.1
+websockets==15.0.1
+yarg==0.1.9
